--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="project">
+    <div class="project container">
         <div class="firstSection"></div>
         <div class="secondSection">
             <div class="secondSectionPart_1">1</div>
             <div class="secondSectionPart_2">
-                <div class="secondSectionPart_2_1">2</div>
-                <div class="secondSectionPart_2_2">3</div>
-                <div class="secondSectionPart_2_3 ">4</div>
+                    <div class="secondSectionPart_2_1 box">2</div>
+                    <div class="secondSectionPart_2_2 box">3</div>
+                
+                <div class="secondSectionPart_2_3 box">4</div>
             </div>
         </div>
         <div class="thirdSection">
