--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="project container">
+
+    <div class="container">
         <div class="firstSection"></div>
         <div class="secondSection">
-            <div class="secondSectionPart_1">1</div>
-            <div class="secondSectionPart_2">
-                    <div class="secondSectionPart_2_1 box">2</div>
-                    <div class="secondSectionPart_2_2 box">3</div>
-                
-                <div class="secondSectionPart_2_3 box">4</div>
+            <div class="second_part_1">1</div>
+            <div class="second_part_2">
+                <div class="first">
+                    <div class="first_1">2</div>
+                    <div class="first_1">3</div>
+                </div>
+                <div class="second">4</div>
             </div>
         </div>
-        <div class="thirdSection">
-            <div class="thirdSection_1">1</div>
-            <div class="thirdSection_1">2</div>
+        <div class="thirdSection ">
+            <div class="third_1">1</div>
+            <div class="third_1">2</div>
         </div>
         <div class="fourthSection">
-            <div class="fourthSectionSubClass">1</div>
-            <div class="fourthSectionSubClass">2</div>
+            <div class="fourth_subSection">1</div>
+            <div class="fourth_subSection">2</div>
         </div>
         <div class="fifthSection"></div>
     </div>
+    
 </body>
 </html>
